# kinect

./: CMakeLists.txt  README  pod.xml
cmake/: lcmtypes.cmake
lcmtypes/: kinect_cmd_t.lcm  kinect_depth_data_t.lcm  kinect_depth_msg_t.lcm  kinect_frame_t.lcm  kinect_image_data_t.lcm  kinect_image_msg_t.lcm  kinect_point2d_t.lcm  kinect_pointcloud_t.lcm  kinect_status_t.lcm
libfreenect/: APACHE20
libfreenect/examples/: CMakeLists.txt
libfreenect/src/: cameras.c
openni/.hg/: dirstate
openni/.hg/cache/: branchheads  tags
openni/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
openni/.hg/store/data/: _makefile.i
openni/.hg/store/data/_c_o_n_t_r_o_l/: blacklist-psengine.conf.i
openni/.hg/store/data/openni/: _makefile.i  fix-java.i
openni/.hg/store/data/ps__engine/: fix-includes.i
patches/: rpath.diff  series
src/freenect-lcm/: CMakeLists.txt  main.c
src/kinect-glview/: CMakeLists.txt  main.c
src/kinect-lcm/: CMakeLists.txt  main.c  pixels.c  test_sender.c
src/kinect-openni-lcm/: CMakeLists.txt  kinectOpenniLCM.cpp  kinectOpenniLCM.h  main.cpp
src/kinect-renderer/: CMakeLists.txt  kinect_renderer.c  kinect_renderer.h  main.c
src/kinect-skeleton-publisher-lcm/: CMakeLists.txt  README
src/kinect-skeleton-publisher-lcm/src/: kinect_skeleton_publisher_openni.cc  kinect_skeleton_publisher_openni.h
src/kinect-skeleton-renderer/: CMakeLists.txt  kinect_skeleton_renderer.cc  kinect_skeleton_renderer.h  main.c
src/kinect-utils/: CMakeLists.txt  kinect-calib.c  kinect-pointcloud-pub.cpp  kinect-pointcloud-pub.h  kinect_calib.c  kinect_calib.h
src/tools/: CMakeLists.txt  rgb_tool.cpp
src/xtion-lcm/: CMakeLists.txt  README.txt  main.cpp  timestamp.cpp  timestamp.h
